# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

*portage-1.8.9_pre37 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: specific
  provides (dev-lang/python-2.2) will be converted to their generic form
  (dev-lang/python) before being recorded.

*portage-1.8.9_pre36 (30 Mar 2002)

  30 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: new
  virtuals fixes and a db-upgrade.py script in the ebuild to solve another
  virtuals problem.

*portage-1.8.9_pre35 (29 Mar 2002)

  29 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: digest
  generation fixes; emerge --update will now update dependents even if the main
  package hasn't been updated.  getdict() fix, fixing a traceback.

*portage-1.8.9_pre34 (28 Mar 2002)

  28 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: Added an indent
  fix for the new virtuals code, eliminating a traceback.  Tweaked digest handling,
  fixing a cosmetic error.

*portage-1.8.9_pre33 (28 Mar 2002)

  28 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: tweaked digest
  creation in doebuild() to hopefully avoid creating digests twice.  I hope I
  didn't break anything in the process.

  28 Mar 2002: Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: "emerge
  update" is now "emerge --update"; "world" added back.  New world
  implementation that works like this ... if you type "emerge media-gfx/gimp",
  media-gfx/gimp will be added to the "world" favorites file in
  /var/cache/edb/world.  This world file is added to the system profile in
  order to create the set of "world" packages to merge.  You can manually put
  specific deps (for pinning) in /var/cache/edb/world and they won't get
  overwritten.  To prevent a package that you specify on the emerge
  command-line from being added to the world profile, use the "--oneshot"